Fixed spacings and worked on the footer

--- a/myStyle.css
+++ b/myStyle.css
@@ -53,7 +53,7 @@ header nav ul li {
     list-style: none;
     display: inline;
     font-size: 70%;
-    margin-top: -10px;
+    /* margin-top: -10px; */
     padding: 5px;
 }
 
@@ -95,6 +95,7 @@ header nav p {
     font-weight: 300;
     color: #333333;
     margin: 2%;
+    /* text-align: center; */
 }
 
 .services {
@@ -102,6 +103,7 @@ header nav p {
 }
 
 .service {
+    text-align: center;
     width: 22%;
     height: 350px;
     border: 1px solid #333333;
@@ -111,7 +113,7 @@ header nav p {
 }
 
 .service img {
-    padding: 15% 25% 5% 25%;
+    padding: 15% 0% 5% 0%;
 }
 
 .service h2 {
@@ -132,10 +134,12 @@ header nav p {
 }
 
 .teamMember {
-    width: 22%;
+    /* width: 22%;
+    margin-left: 2em;     */
+    width: 22.5%;
+    margin-left: 2%;
     height: 600px;
     /* border: 1px solid #333333;  */
-    margin-left: 2em;
     position: relative;
     float: left;
 }
@@ -146,10 +150,12 @@ header nav p {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #383838;
     padding: 3%;
+    text-align: center;
 }
 
 .teamMember p {
     color: #979797;
+    font-size: 1.087em;
 }
 
 .teamMember a:link {
@@ -160,7 +166,7 @@ header nav p {
 }
 
 footer {
-    margin-top: 4em;
+    /* margin-top: 4em; */
     color: #949494;
     float: left;
     width: 100%;
@@ -177,10 +183,10 @@ footer a:link {
 th,
 td {
     width: 20%;
-    padding-left: 5%;
+    padding-left: 3%;
 }
 
-.rounded{
+.rounded {
     font-size: 90%;
     padding: 2%;
     color: white;
@@ -207,19 +213,26 @@ footer th {
 
 .postTitle {
     font-size: 17px;
+    margin: 0;
 }
 
 footer input, textarea {
     background-color: #222222;
-    width: 13em;
-    padding: 10px;
+    width: 14em;
+    padding: 0.5em;
     font-size: 17px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-bottom: 1em;
+    margin-bottom: 0.5em; 
 }
 
 .copyright {
     margin-top: 3em;    
     background-color: #2b2b2b;
     height:50px;
+}
+
+.copyright p {
+    height: 50px;
+    line-height: 50px;
+    padding-left: 3%;
 }
